<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/boutonJeu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boutonJeu" />

        <Button
            android:id="@+id/boutonMeilleurScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boutonMeilleurScore" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/boutonAPropos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boutonAPropos" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>